# Company-Brain-

./: .gitignore  .skills  CLAUDE.md  README.md  judge.txt  plan.txt
backend/: Cargo.toml  config.py  main.py
backend/src/: main.rs
backend/src/api/: audit.rs  files.rs  governance.rs  ingest.rs  mod.rs  resolve.rs  search.rs
backend/src/humandelta/: client.rs  mod.rs
backend/src/models/: mod.rs
backend/src/pollution/: scanner.rs
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/governance/: page.tsx
frontend/app/ingest/: page.tsx
frontend/app/search/: page.tsx
frontend/src/components/: DepthGauge.tsx  NavBar.tsx  PageTransition.tsx
frontend/src/components/water/: CoralDivider.tsx  FlowLayout.tsx  GlassPanel.tsx  RippleButton.tsx  VortexSpinner.tsx  WaterBackground.tsx  WaterClarityBadge.tsx  WaveLoader.tsx
frontend/src/lib/: api.ts  types.ts
testfiles/: amazon_return_fake.txt  amazon_return_real.txt  clean_hr_policy.md  murky_employee_data.md  refund_policy_v1.md  refund_policy_v2.md  toxic_leaked_config.md
